--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Bitlayer Docs
-site_url: https://docs.bitlayer.org/
+site_url: https://web3-jerry.github.io/bitlayer-org/
 site_author: bitlayer
-repo_url: https://github.com/bitlayer-org/bitlayer-org.github.io
+repo_url: https://web3-jerry.github.io/bitlayer-org/
 docs_dir: docs/
 theme:
     name: material
